created new index, renamed old index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<html>
-    <head></head>
-    <body>
-        <p>Hello, World!</p>
-        <p>My name is Calvin</p> <!-- Change NAME to your name! -->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calvin Collison</title>
+</head>
+<body>
+    <h1>Welcome to my website</h1>
+    <p>
+        <img src="/img/pond_picture.jpeg" style= "height: 500px; width:500px"
+             alt="Handsome blonde man at a pond" >
+    </p>
+    <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
+
+</body>
 </html>
