added ica3, changed index

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <h1>Welcome to my website</h1>
-    <p>
-        <img src="/img/pond_picture.jpeg" style= "height: 500px; width:500px"
-             alt="Handsome blonde man at a pond" >
-    </p>
+    <img src="img/pond_picture.png" style= "height: 500px; width:500px;"
+         alt="Handsome blonde man at a pond" >
     <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
 
 </body>
