--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -22,24 +22,28 @@
         <p>The <a href="https://en.wikipedia.org/wiki/New_Horizons">New Horizons</a> became the first spacecraft to perform a brief flyby of Pluto on July 14, 2015, making detailed measurements and observations of Pluto and its moons. In September 2016, astronomers announced that the reddish-brown cap of the north pole of Charon is composed of tholins, organic macromolecules that may be ingredients for the emergence of life, produced from methane, nitrogen, and other gases released from the atmosphere of Pluto and transferred 19,000 km (12,000 mi) to the orbiting moon.    </p>
 
     <ol>
-        <li><a href="#history">History</a></li>
-        <ol>
-            <li><a href="#discovery">Discovery</a></li>
-            <li><a href="#name_and_symbol">Name and Symbol</a></li>
-            <li><a href="#planet_X_disproved">Planet X Disproved</a></li>
-            <li><a href="#classification">Classification</a></li>
-                <ol>
-                    <li><a href="#IAU_classification">IAU Classification</a></li>
-                </ol>
-        </ol>
-        <li><a href="#orbit">Orbit</a></li>
-        <ol>
-            <li><a href="#relationship_with_neptune">Relationship with Neptune</a></li>
+        <li><a href="#history">History</a>
             <ol>
-                <li><a href="#other_factors">Other factors</a></li>
+                <li><a href="#discovery">Discovery</a></li>
+                <li><a href="#name_and_symbol">Name and Symbol</a></li>
+                <li><a href="#planet_X_disproved">Planet X Disproved</a></li>
+                <li><a href="#classification">Classification</a>
+                    <ol>
+                        <li><a href="#IAU_classification">IAU Classification</a></li>
+                    </ol>
+                </li>
             </ol>
-            <li><a href="#quasi-satellite">Quasi-satellite</a></li>
-        </ol>
+        </li>
+        <li><a href="#orbit">Orbit</a>
+            <ol>
+                <li><a href="#relationship_with_neptune">Relationship with Neptune</a>
+                    <ol>
+                        <li><a href="#other_factors">Other factors</a></li>
+                    </ol>
+                </li>
+                <li><a href="#quasi-satellite">Quasi-satellite</a></li>
+            </ol>
+        </li>
         <li><a href="#rotation">Rotation</a></li>
     </ol>
 <h2 id="history">History</h2>
