Added style.css, improved index.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calvin Collison</title>
+    <link rel="stylesheet" href="./Style Sheets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to my website</h1>
-    <img src="/img/pond_picture.png" style= "height: 500px; width:500px;"
-         alt="Handsome blonde man at a pond" >
+    <header>
+        <h1>Welcome to my website</h1>
+    </header>
+    <hr>
+    <img src="/img/pond_picture_2.png"
+         alt="Handsome blonde man at a pond" 
+         width="378px"
+         height="504px">
     <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
 
 </body>
