Improved index and its style sheet

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Welcome to my website</h1>
-    </header>
-    <hr>
-    <img src="/img/pond_picture_2.png"
-         alt="Handsome blonde man at a pond" 
-         width="378px"
-         height="504px">
-    <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
-
+    <nav>
+        <h1 id="name1">CALVIN COLLISON</h1>
+        <div class="page_navigation">
+            <h1><u>HOME</u></h1>
+            <h1>PROJECTS</h1>
+            <h1>ABOUT</h1>
+        </div>
+    </nav>
+    <article>
+        <img src="/img/pond_picture_2.png"
+            alt="Handsome blonde man at a pond">
+        <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
+    </article>
 </body>
 </html>
