--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <h1>ABOUT</h1>
         </div>
     </nav>
-    <article>
+    <div id="content">
         <img src="/img/pond_picture_2.png"
             alt="Handsome blonde man at a pond">
         <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
-    </article>
+    </div>
 </body>
 </html>
