--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
     <nav>
         <h1 id="name1">CALVIN COLLISON</h1>
         <div class="page_navigation">
-            <h1><u>HOME</u></h1>
-            <h1>PROJECTS</h1>
-            <h1>ABOUT</h1>
+            <h1><u><a href="./index.html"> HOME</a></u></h1>
+            <h1><a href="./projects.html">PROJECTS</a></h1>
+            <h1><a href="./contact.html">CONTACT</a></h1>
         </div>
     </nav>
-    <div id="content">
-        <img src="/img/pond_picture_2.png"
-            alt="Handsome blonde man at a pond">
-        <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
+    <div>
+        <div class="content">
+            <img src="./img/pond_picture_2.png"
+                alt="Handsome blonde man at a pond">
+            <div>
+                <h2>Hello!</h2>
+                <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
