Changed picture, fixed validation errors

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </nav>
     <div>
         <div class="content">
-            <img src="./img/pond_picture_2.png"
-                alt="Handsome blonde man at a pond">
+            <img src="./img/mePortrait.png"
+                alt="Portrait picture of Calvin Collison">
             <div>
                 <h2>Hello!</h2>
                 <p>My name is <strong>Calvin Collison</strong>. I use he/him pronouns, and I am excited to learn the ins and outs of web-development. Here is one of my <a href="https://www.youtube.com/watch?v=LJHnRzJVTMs">favorite Youtube videos</a></p>
