--- a/projectPages/project1.html
+++ b/projectPages/project1.html
@@ -28,12 +28,12 @@
     <div class="projectPost">
         <div class="content">
             <h2>Hexagon Opal Ring</h2>
-            <img src="../img/p1_sketches.JPG" class="projectPic">
+            <img src="../img/p1_sketches.JPG" class="projectPic" alt="Sketches of the ring">
             <p>I started this project with a couple sketches to get a basic idea of the shape. Initially, I thought I wanted the bezel to be an octagon, but after my sketches I started to favor a hexagon.</p>
             <p>The other reason I ended up with going for a hexagon is because I did not have fantastic tools for bending the silver with precision; however, I do have a set of allen wrenches, and I figured using them as a form would make things easy.</p>
-            <img src="../img/roughRing.png" class="projectPic"> 
+            <img src="../img/roughRing.png" class="projectPic" alt="The ring unpolished without any opal"> 
             <p>Having a plan, I went to fabrication. First I rolled a 1oz silver bullion down quite thin using my jewerly roller. I cut it into a strip slightly thicker than what I wanted the final bezel to be. Using a hammer and an allen wrench, I formed the bezel and soldered it closed. Next I took some leftover ring-band stock and soldered the bezel to it, forming a rough ring.</p>
-            <img src="../img/HexRingThumbnail.png" class="projectPic">
+            <img src="../img/HexRingThumbnail.png" class="projectPic" alt="a silver ring with a hexagonal opal setting">
             <p>Next I filled in the bezel layer by layer using opal and CA glue. Finally, I gave it a thorough polish both using my dremel and by hand.</p>
         </div>
     </div>
