--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     <div id="projects">
         <div class="content">
             <div class="thumbnail">
-                <img src="./img/HexRingThumbnail.png" >
+                <img src="./img/HexRingThumbnail.png" alt="a silver ring with a hexagonal opal setting">
             </div>
             <div class="description">
                 <h2><a href="./projectPages/project1.html">Project #1: Hexagon Opal Ring</a></h2>
@@ -37,13 +37,13 @@
         </div>
         <div class="content">
             <div class="thumbnail">
-                <img src="./img/masqueradePoster.png">
+                <img src="./img/masqueradePoster.png" alt="An advertisement poster for an alcohol free event">
             </div>
             <div class="description">
                 <h2>Project #2: Masquerade Posters</h2>
                 <p> This project was the midterm for my design foundations class, and I was in charge of creating advertisement posters for my group's idea. Full post coming soon!</p>
             </div>
         </div>
-    <div>
+    </div>
 </body>
 </html>
