--- a/assignments/assignment12/assignment12v2.html
+++ b/assignments/assignment12/assignment12v2.html
@@ -12,16 +12,18 @@
     <p class="output"></p>
     <input class="resetButton" type="button" name="submit-button" value="Reset">
     <input class="submitButton" type="button" name="submit-button" value="Submit">
-    <input class="numButton" type="button" id="button0" value="0">
-    <input class="numButton" type="button" id="button1" value="1">
-    <input class="numButton" type="button" id="button2" value="2">
-    <input class="numButton" type="button" id="button3" value="3">
-    <input class="numButton" type="button" id="button4" value="4">
-    <input class="numButton" type="button" id="button5" value="5">
-    <input class="numButton" type="button" id="button6" value="6">
-    <input class="numButton" type="button" id="button7" value="7">
-    <input class="numButton" type="button" id="button8" value="8">
-    <input class="numButton" type="button" id="button9" value="9">
+    <div id="buttonArea">
+        <input class="numButton" type="button" id="button0" value="0">
+        <input class="numButton" type="button" id="button1" value="1">
+        <input class="numButton" type="button" id="button2" value="2">
+        <input class="numButton" type="button" id="button3" value="3">
+        <input class="numButton" type="button" id="button4" value="4">
+        <input class="numButton" type="button" id="button5" value="5">
+        <input class="numButton" type="button" id="button6" value="6">
+        <input class="numButton" type="button" id="button7" value="7">
+        <input class="numButton" type="button" id="button8" value="8">
+        <input class="numButton" type="button" id="button9" value="9">
+    </div>
     <script src="assignment12v2.js"></script>
 </body>
 </html>
