--- a/video.html
+++ b/video.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calvin Collison</title>
-    <link rel="stylesheet" href="./styleSheets/style.css">
+    <link rel="stylesheet" href="../styleSheets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
@@ -48,17 +48,13 @@
             <li><h1><a class="menuLink" href="./video.html">VIDEOS I LIKE</a></h1></li>
         </ul>
     </nav>
-    <div id="contact">
+    <div class="video">
         <div class="content">
-            <img src="./img/pond_picture_2.png"
-                alt="Handsome blonde man at a pond">
-            <div>
-                <h2>Contact me:</h2>
-                <p>Shoot me an email at caco4561@colorado.edu</p>
-                <p>Send me a DM on <a href="https://www.reddit.com/user/MrDrYarnski">reddit</a>, <a href="https://twitter.com/CalvinCollison">twitter</a>, or <a href="https://www.instagram.com/calvincollison/">instagram</a></p>
-            </div>
+            <h2>Here's a video I like:</h2>
+            <iframe class="videoPlayer" src="https://www.youtube.com/embed/LJHnRzJVTMs"></iframe>
         </div>
     </div>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/videoScript.js"></script>
 </body>
 </html>
