--- a/projectPages/project1.html
+++ b/projectPages/project1.html
@@ -20,10 +20,33 @@
     <nav>
         <h1 id="name1">CALVIN COLLISON</h1>
         <div class="page_navigation">
-            <h1><a href="../index.html"> HOME</a></h1>
-            <h1><u><a href="../projects.html">PROJECTS</a></u></h1>
-            <h1><a href="../contact.html">CONTACT</a></h1>
+            <!-- <h1><a href="./index.html">HOME</a></h1>
+            <h1><u><a href="./projects.html">PROJECTS</a></u></h1> -->
+            <!-- <h1><a href="./contact.html">CONTACT</a></h1> -->
+            <button class="ham">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
         </div>
+    </nav>
+    <div class="overlay"></div>
+    <nav class="sideNav">
+        <button class="menuX">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+        </button>
+        <ul>
+            <li><h1><a class="menuLink" href="../index.html">HOME</a></h1></li>
+            <li><h1><a class="menuLink" href="../projects.html">PROJECTS</a></h1>
+                <ul>
+                    <li><h1><a class="menuLink" href="./project1.html">HEXAGON OPAL RING</a></h1></li>
+                </ul>
+            </li>
+            <li><h1><a class="menuLink" href="../contact.html">CONTACT</a></h1></li>
+            <li><h1><a class="menuLink" href="../video.html">VIDEOS I LIKE</a></h1></li>
+        </ul>
     </nav>
     <div class="projectPost">
         <div class="content">
@@ -33,9 +56,10 @@
             <p>The other reason I ended up with going for a hexagon is because I did not have fantastic tools for bending the silver with precision; however, I do have a set of allen wrenches, and I figured using them as a form would make things easy.</p>
             <img src="../img/roughRing.png" class="projectPic" alt="The ring unpolished without any opal"> 
             <p>Having a plan, I went to fabrication. First I rolled a 1oz silver bullion down quite thin using my jewerly roller. I cut it into a strip slightly thicker than what I wanted the final bezel to be. Using a hammer and an allen wrench, I formed the bezel and soldered it closed. Next I took some leftover ring-band stock and soldered the bezel to it, forming a rough ring.</p>
-            <img src="../img/HexRingThumbnail.png" class="projectPic" alt="a silver ring with a hexagonal opal setting">
+            <img src="../img/HexRingProjPic.png" class="projectPic" alt="a silver ring with a hexagonal opal setting">
             <p>Next I filled in the bezel layer by layer using opal and CA glue. Finally, I gave it a thorough polish both using my dremel and by hand.</p>
         </div>
     </div>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
